objects/Email_Preferences__mdt.object
<CustomObject>
    <description>MDT to hold config needs of setting Email preferences on signups.</description>
    <fields>
        <fullName>BrandId__c</fullName>
        <label>BrandId</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrefCenterInterests__c</fullName>
        <label>PrefCenterInterests</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystem__c</fullName>
        <label>Source System</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WelcomeSource__c</fullName>
        <label>Welcome Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Email Preferences</label>
    <listViews>
        <fullName>AllRecords</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>BrandId__c</columns>
        <columns>Location__c</columns>
        <columns>SourceSystem__c</columns>
        <columns>WelcomeSource__c</columns>
        <columns>PrefCenterInterests__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SourceSystem__c</field>
            <operation>equals</operation>
            <value>eComm</value>
        </filters>
        <filters>
            <field>BrandId__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>WelcomeSource__c</field>
            <operation>equals</operation>
            <value>02</value>
        </filters>
        <label>AllRecords</label>
    </listViews>
    <pluralLabel>Email Preferences</pluralLabel>
</CustomObject>